kubernetes/grievance-helm-chart/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: backend
